--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,31 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project Starter</title>
+  <title>Assignment A03</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./stylesheets/main.scss">
 </head>
 
 <body>
-  <!--  Your HTML goes here-->
-  <h1>Welcome to WEB 2620!!!!!</h1>
+  <!-- Henry Nelson -->
+  <div class="container">
+    <div class="boxes">
+      <div class="box1 box">1</div>
+      <div class="box2 box">2</div>
+      <div class="box3 box">3</div>
+      <div class="box4 box">4</div>
+      <div class="box5 box">5</div>
+      <div class="box6 box">6</div>
+      <div class="box7 box">7</div>
+      <div class="box8 box">8</div>
+      <div class="box9 box">9</div>
+      <div class="box10 box">10</div>
+      <div class="box11 box">11</div>
+      <div class="box12 box">12</div>
+      <div class="box13 box">13</div>
+    </div>
+  </div>
+
 <script type="module" src="./javascripts/main.js"></script>
 </body>
 </html>
